undid a new mistake, fixed positioning, added invisible footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body{
     background: url(../images/flat,800x800,070,f.u2.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    overflow: none;
 }
 
 .fighters{
@@ -58,4 +59,18 @@ body{
 
 .wrap{
     min-height: 100%;
+}
+
+#main{
+    overflow: auto;
+    padding-bottom: 120px;
+}
+
+.footer{
+    position: relative;
+    margin-top: -100px;
+    height: 100px;
+    clear: both;
+    padding-top: 2px;
+    visibility: hidden;
 }
